--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="menu_item_help">Help</string>
     <string name="todo">TODO</string>
     <string name="textview">TextView</string>
-    <string name="titulo">MiniGames</string>
+    <string name="titulo1">Mini</string>
+    <string name="titulo2">GAMES</string>
 </resources>
